--- a/front/tsconfig.json
+++ b/front/tsconfig.json
@@ -18,7 +18,8 @@
     "importHelpers": true,
     "target": "es2020",
     "module": "es2020",
-    "lib": ["es2020", "dom"]
+    "lib": ["es2020", "dom"],
+    "types": ["cypress"]
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
@@ -26,5 +27,6 @@
     "strictInputAccessModifiers": true,
     "strictTemplates": true
   },
-  "exclude": ["cypress"]
+  "exclude": ["cypress"],
+  "include": ["cypress/**/*.ts"]
 }
